# TMFCpy

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: PPIRegressorCompareSPM.ipynb  VoiCompareSPM.ipynb
tests/: test_bold_deconvolution.py  test_first_level_utils.py  test_gppi_regressors_utils.py  test_matlab_utils.py
tmfc_py/: bold_deconvolution.py  first_level_utils.py  gppi_regressors_utils.py  matlab_utils.py
